[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/CaixaInfo.gd" type="Script" id=1]
[ext_resource path="res://assets/img/right.png" type="Texture" id=2]
[ext_resource path="res://assets/img/X.png" type="Texture" id=3]

[node name="CaixaInfo" type="Polygon2D"]
color = Color( 0.345098, 0.482353, 0.494118, 1 )
polygon = PoolVector2Array( -1.50208, -2.76242, -1.50208, -230.451, 1367.46, -229.037, 1367.46, -1.34821 )
script = ExtResource( 1 )

[node name="Texto" type="RichTextLabel" parent="."]
margin_left = 23.0
margin_top = -202.0
margin_right = 443.0
margin_bottom = -167.0
rect_scale = Vector2( 3, 3 )
custom_colors/default_color = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_colors/selection_color = Color( 0.00390625, 0.00386047, 0.00386047, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
text = "Sem descrição no momento"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoProx" type="Button" parent="."]
show_behind_parent = true
margin_left = 1300.99
margin_top = -63.7661
margin_right = 1359.99
margin_bottom = -10.7661
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prox" type="Sprite" parent="."]
position = Vector2( 1329.46, -37.278 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="BotaoVoltar" type="Button" parent="."]
show_behind_parent = true
margin_left = 1217.0
margin_top = -61.0
margin_right = 1273.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Sprite" parent="."]
position = Vector2( 1245.84, -35.9594 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
flip_h = true

[node name="Fechar" type="Button" parent="."]
margin_left = 1303.0
margin_top = -229.0
margin_right = 1365.0
margin_bottom = -172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1332.36, -198.115 )
scale = Vector2( 0.59551, 0.544948 )
texture = ExtResource( 3 )
[connection signal="pressed" from="BotaoProx" to="." method="_on_BotaoProx_pressed"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
[connection signal="pressed" from="Fechar" to="." method="_on_Fechar_pressed"]
